--- a/common/css/default.css
+++ b/common/css/default.css
@@ -52,3 +52,40 @@ and open the template in the editor.
         width: 299px;
     }
 }
+
+.close-to{
+    margin-top: 1px;
+    padding-top: 0px;
+    margin-bottom: 1px;
+    padding-bottom: 0px;
+}
+
+hr{
+    height: 4px;
+    border:none;
+    border-top: 2px dashed #dcdcdc;
+}
+
+.hr-footer{
+    height: 4px;
+    border: none;
+    border-top: 3px #dcdcdc;
+    border-top-style:dashed ;
+}
+
+.tab-content{
+    margin-top: 45px;
+    margin-bottom: 45px;
+}
+.table-item-right{
+    padding-top: 10px;
+    border-style: solid;
+    border-width: 1px;
+    border-left: none; 
+}
+
+.table-item-left{
+    padding-top: 10px;
+    border-style: solid;
+    border-width: 1px; 
+}
