--- a/common/css/default.css
+++ b/common/css/default.css
@@ -89,3 +89,24 @@ hr{
     border-style: solid;
     border-width: 1px; 
 }
+
+.table-title-item{
+    background: #dcdcdc;
+    border-style:none;
+    margin-left: 1px;
+}
+
+.table-nopad{
+    padding-top: 3px;
+    padding-bottom:3px;
+    background: #eee;
+    border-style:none;
+    margin-left: 1px;
+}
+
+.table-item{
+    padding-top: 10px;
+    background: #eee;
+    border-style:none;
+    margin-left: 1px;
+}
